@@ -1,3 +1,9 @@
+trunk
+
+- Opal GUI
+    -Added the number of cpu input filed in the submission form CLEM
+
+
 Version 1.9.3:
 
 - Opal Dashboard:
